<resources>
    <string name="app_name">ScholarshipLike</string>
    <string name="app_name_korean">장학라이크</string>

    <!-- 홈탭 페이지 -->
    <string name="scholar_input_name">님이</string>
    <string name="scholar_get">받을 수 있는 장학금을</string>
    <string name="scholar_conf">확인해 보세요!</string>
    <string name="go_nation_web">한국장학재단</string>
    <string name="go_condition">내조건수정</string>

    <!-- 캘린더 관련 -->
    <string name="calendar_year_month_format">yyyy년 MM월</string>
    <string name="calendar_month_format">MM</string>
    <string name="sun">일</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="scheduelTitle">일정 제목</string>
    <string name="scheduelDate">xx.xx</string>
    <string name="tilde">~</string>

    <!-- 알람 페이지 -->
    <string name="alarm_tab_all">전체</string>
    <string name="alarm_tab_scholar">장학금</string>

    <!-- 좋아요 페이지 -->
    <string name="like_tab_scholar">장학금</string>
    <string name="like_tab_magazine">매거진</string>

    <!-- 검색창 페이지 -->
    <string name="search">검색어 입력</string>

    <!-- 모든 scholarship.xml에 사용 -->
    <string name="title1">해당 정보로 최대 </string>
    <string name="title2">건의 장학금을 받으실 수 있습니다.</string>
    <string name="my_scholarship">내 장학금</string>
    <string name="all_scholarship">전체 장학금</string>
    <string name="korea_scholar">국가 장학금</string>
    <string name="out_scholar">교외 장학금</string>
    <string name="univ_scholar">교내 장학금</string>
    <string name="msg_token_fmt">토큰 정보</string>
    <string name="period_middle">~</string>
    <string name="reset">초기화</string>
    <string name="period1">1차 :</string>
    <string name="period2">2차 :</string>
    <string name="score_standard">※ 4.5만점 기준</string>

    <!-- 장학금 세부페이지 관련 -->
    <string name="scholarName">장학금 이름</string>
    <string name="movetoWebpage">웹페이지로 이동</string>
    <string name="contents">내용</string>
    <string name="paymentInstitution">지급기관</string>
    <string name="period">신청기간</string>
    <string name="maxMoney">최대금액</string>
    <string name="paymentType">지급유형</string>
    <string name="condition">조건</string>
    <string name="note">비고</string>
    <string name="to">~</string>

    <!-- 지원금 세부페이지 관련 -->
    <string name="supportName">지원금 이름</string>

    <!-- 매거진 관련 -->
    <string name="m_title">매거진 제목</string>
    <string name="m_contents">매거진 내용</string>
    <string name="m_announcement">내 돈 어디에 쓸까?</string>
    <string name="all">전체</string>
    <string name="finance">금융</string>
    <string name="life">생활</string>
    <string name="etc">기타</string>

    <!-- 프로필탭 페이지 -->
    <string name="change_profile">프로필 수정</string>
    <string name="user_name_default">홍길동</string>
    <string name="user_email_default">xxxxx@xxxxx</string>
    <string name="change_my_condition">내 조건 수정</string>
    <string name="set_alarm">알림설정</string>
    <string name="alarm_app_all">앱 전체</string>
    <string name="alarm_scholarship">장학금</string>
    <string name="alarm_magazine">매거진</string>
    <string name="heart_post">좋아요 누른 게시물</string>
    <string name="app_info">앱 정보</string>
    <string name="questions">문의</string>
    <string name="logout">로그아웃</string>
    <string name="signout">탈퇴하기</string>
    <string name="terms_service">서비스 이용약관</string>
    <string name="terms_privacy">개인정보 처리방침 </string>
    <string name="my_page_eng">My Page</string>
    <string name="image_desc_user_image">userImage</string>
    <string name="image_desc_arrow_right">arrowRight</string>
    <string name="image_desc_pencil">pencil</string>

    <!-- 내 조건 수정 페이지 -->
    <string name="save">저장</string>
    <string name="income">학자금 지원구간</string>
    <string name="family_rel">가족관계</string>
    <string name="family_rel_dad">부</string>
    <string name="family_rel_mom">모</string>
    <string name="child_all">형제자매</string>
    <string name="child_me">째 중</string>
    <string name="school_att_leav">재학 여부</string>
    <string name="school_attending">재학</string>
    <string name="school_leaving">휴학</string>
    <string name="semester">이수 학기</string>
    <string name="pre_semester">직전 학기</string>
    <string name="pre_semester_class">이수 학점</string>
    <string name="pre_semester_score">성적</string>
    <string name="area">거주지</string>
    <string name="country">국적</string>
    <string name="country_local">내국인</string>
    <string name="country_foreigner">외국인</string>
    <string name="extra">추가사항</string>
    <string name="extra_national_merit">보훈보상대상자</string>
    <string name="extra_disabled">장애 여부</string>

    <!-- activity_app_info -->
    <string name="vCode">versionCode : </string>
    <string name="vName">versionName : </string>

    <!-- activity_profile_change -->
    <string name="basicInpo">기본 정보</string>
    <string name="nickname">닉네임</string>
    <string name="myUniv">소속 대학교</string>
    <string name="changePw">비밀번호 재설정</string>
    <string name="reSetPwBt">이메일 보내기</string>
    <string name="send_pw_reset_email">비밀번호 재설정 이메일 보내기</string>

    <!-- 로그아웃 페이지 -->
    <string name="confirmLogoutMsg">로그아웃 하시겠습니까?</string>
    <string name="cancel">취소</string>

    <!-- 로그인, 회원가입 -->
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="user_name_input">이름</string>
    <string name="accept_service">서비스 약관 동의</string>
    <string name="accept_privacy">개인정보 처리방침 동의</string>
    <string name="login">로그인</string>
    <string name="login_reset_password">비밀번호 재설정</string>
    <string name="signup">회원가입</string>
    <string name="login_naver">네이버 로그인</string>
    <string name="login_kakao">카카오 로그인</string>
    <string name="go_back">돌아가기</string>
    <string name="reset_password">비밀번호 재설정하기</string>
    <string name="reset_password_explain">가입했던 이메일을 입력해주세요.\n비밀번호 재설정 메일을 보내드립니다.</string>
    <string name="reset_password_result">비밀번호 재설정 메일이 발송되었습니다.\n메일을 확인하세요.</string>
    <string name="signup_profile_title">프로필 정보 입력</string>
    <string name="signup_con_title">내 조건 입력</string>
    <string name="signup_profile_essen">* 모두 필수항목입니다.</string>
    <string name="next">다음</string>
    <string name="start">시작하기</string>
    <string name="welcome">장학라이크에 오신 것을 환영합니다.</string>
    <string name="see">보기</string>
    <string name="confirm">확인</string>
    <string name="image_desc_logo">logo</string>

    <!-- 탈퇴하기 -->
    <string name="signout_really">정말 탈퇴하시겠어요?</string>
    <string name="signout_req_reason">장학라이크를 탈퇴하시려는 이유를 선택해주세요. 어플 개선에 많은 도움이 됩니다.</string>
    <string name="rsn_info">정보가 부족하다</string>
    <string name="rsn_uncom">어플 이용이 불편하다</string>
    <string name="rsn_better">더 좋은 서비스가 존재한다</string>
    <string name="rsn_useless">사용 빈도가 낮다</string>
    <string name="write_rsn">기타 이유를 작성 해 주세요.</string>

    <!-- 문의 -->
    <string name="sender">보낸사람</string>
    <string name="receiver">받는사람</string>
    <string name="write_questions">문의 내용을 작성 해 주세요.</string>
    <string name="send_mail">메일 보내기</string>
    <string name="send_mail_result">답변은 보내신 메일 주소로 수신됩니다.\n2~3일 정도 소요될 수 있습니다.</string>
    <string name="questions_subtitle">* 장학라이크로 문의 메일을 보냅니다</string>

    <!-- 지원금 -->
    <string name="support_detail_title">title</string>
    <string name="support_detail_contents">contents</string>


</resources>