<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <Button
            android:id="@+id/movetoweb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="홈페이지로 이동"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="686dp" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/share"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_share"
            android:padding="5dp"
            />

        <Button
            android:id="@+id/like"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_like_selector"
            android:padding="5dp"
            tools:layout_editor_absoluteX="355dp"
            tools:layout_editor_absoluteY="16dp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/scholarName"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="45dp"
                android:background="@drawable/ic_scholarship_detail_background"
                android:padding="3dp"
                android:text="@string/contents"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:text="@string/contents" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_scholarship_detail_background"
                android:padding="3dp"
                android:text="@string/paymentInstitution"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/paymentInstitution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:text="@string/contents" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_scholarship_detail_background"
                android:padding="3dp"
                android:text="@string/period"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:text="@string/contents" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_scholarship_detail_background"
                android:padding="3dp"
                android:text="@string/maxMoney"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/maxmoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:text="@string/contents" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_scholarship_detail_background"
                android:padding="3dp"
                android:text="@string/paymentType"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/paymenttype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:text="@string/contents" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_scholarship_detail_background"
                android:padding="3dp"
                android:text="@string/condition"
                android:textColor="#000000"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/area" />

                <TextView
                    android:id="@+id/income"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/income" />

                <TextView
                    android:id="@+id/mom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/family_rel_mom" />

                <TextView
                    android:id="@+id/child"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/child_all" />

                <TextView
                    android:id="@+id/semester"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/semester" />

                <TextView
                    android:id="@+id/prescore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pre_semester_score" />

                <TextView
                    android:id="@+id/preclass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pre_semester_class" />

                <TextView
                    android:id="@+id/nationalmerit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/extra_national_merit" />

                <TextView
                    android:id="@+id/disabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/extra_disabled" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_scholarship_detail_background"
                android:padding="3dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:text="@string/note"/>

            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:text="@string/contents"
                android:paddingBottom="50dp"/>

            <!-- admob -->
            <com.google.android.gms.ads.AdView
                android:id="@+id/scholarship_detail_adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:adSize="SMART_BANNER"
                app:adUnitId="ca-app-pub-3940256099942544/6300978111"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/dad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/family_rel_dad" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>