<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/signup_con_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
        android:text="@string/signup_con_title"
        android:textColor="@color/maincolor"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scrollView_condition1"/>

    <ScrollView
        android:id="@+id/scrollView_condition1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/signup_con_btn1"
        app:layout_constraintTop_toBottomOf="@+id/signup_con_title1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="vertical">

            <!-- 학지금 지원구간 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:text="@string/income"
                    android:textColor="@color/text_black" />

                <Spinner
                    android:id="@+id/init_myIncome1"
                    android:layout_width="100dp"
                    android:layout_height="25dp" />
            </LinearLayout>

            <!-- 가족관계 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/family_rel"
                    android:textColor="@color/text_black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/cb_init_dad1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:text="@string/family_rel_dad" />

                        <CheckBox
                            android:id="@+id/cb_init_mom1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/family_rel_mom" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/child_all"
                            android:textColor="@color/text_black" />

                        <EditText
                            android:id="@+id/et_init_childAll1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="2"
                            android:inputType="number"
                            android:maxLength="2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/child_me"
                            android:textColor="@color/text_black" />

                        <EditText
                            android:id="@+id/et_init_childMe1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="2"
                            android:inputType="number"
                            android:maxLength="2" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!-- 이수학기 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:text="@string/semester"
                    android:textColor="@color/text_black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/init_mySemester1"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_init_myPreSemGrade1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/pre_semester_grade"
                            android:textColor="@color/text_black" />

                        <EditText
                            android:id="@+id/et_init_myPreSemGrade1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="2"
                            android:inputType="number"
                            android:maxLength="2" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_init_myPreSemScore1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/pre_semester_score"
                            android:textColor="@color/text_black" />

                        <EditText
                            android:id="@+id/et_init_myPreSemScore1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="3"
                            android:inputType="numberDecimal"
                            android:maxLength="3" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <!-- 거주지 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/area"
                    android:textColor="@color/text_black" />

                <Spinner
                    android:id="@+id/init_myArea1"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <!-- 국적 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:textColor="@color/text_black" />

                <RadioGroup
                    android:id="@+id/rg_init_country1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rb_init_country_in1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country_local" />

                    <RadioButton
                        android:id="@+id/rb_init_country_out1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country_foreigner" />
                </RadioGroup>
            </LinearLayout>

            <!-- 추가사항 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/extra"
                    android:textColor="@color/text_black" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!-- 국가유공자 -->
                    <CheckBox
                        android:id="@+id/cb_init_nationalMerit1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/extra_national_merit" />

                    <!-- 장애 여부 -->
                    <CheckBox
                        android:id="@+id/cb_init_disabled1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/extra_disabled" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/signup_con_btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView_condition1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/btn_condition_goback1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/go_back" />

        <Button
            android:id="@+id/btn_start1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/maincolor"
            android:text="@string/start"
            android:textColor="#ffffff" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>